<resources>
    <string name="app_name">Cerita Ngaliyan Hebat</string>
    <string name="name_kel">Nama Kelurahan</string>
    <string name="description_kel_1">Deskripsi Kelurahan Satu</string>
    <string name="foto_kel">Foto Kelurahan</string>
    <string name="foto_kelurahan">Foto Kelurahan</string>
    <string name="nama_kelurahan">Nama Kelurahan</string>
    <string name="deskripsi_kelurahan">Deskripsi Kelurahan</string>
    <string name="deskripsi_kelurahan_satu">Deskripsi Kelurahan</string>
    <string name="nama_kelurahan_satu">Nama Kelurahan</string>
    <string name="foto_kelurahan_detail">Foto Kelurahan Detail</string>
    <string name="foto_splashscreen_satu">Foto Splashscreen Satu</string>
    <string name="kecamatan_ngaliyan">KECAMATAN NGALIYAN</string>
    <string name="foto_splashscreen_dua">Foto Splashscreen Dua</string>
    <string name="about">Tentang</string>
    <string-array name="data_name">
        <item>
            Kelurahan Bambankerep
        </item>
        <item>
            Kelurahan Bringin
        </item>
        <item>
            Kelurahan Gondoriyo
        </item>
        <item>
            Kelurahan Kalipancur
        </item>
        <item>
            Kelurahan Ngaliyan
        </item>
        <item>
            Kelurahan Podorejo
        </item>
        <item>
            Kelurahan Purwoyoso
        </item>
        <item>
            Kelurahan Tambakaji
        </item>
        <item>
            Kelurahan Wates
        </item>
        <item>
            Kelurahan Wonosari
        </item>
    </string-array>

    <string-array name="data_description">
        <item>
            As the Avengers and their allies have continued to protect the world from threats too large for any one
            hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy,
            his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his
            twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate
            of Earth and existence itself has never been more uncertain.
        </item>
        <item>
            In the near future, a ship of space explorers crash land on an unknown planet. Theyr e soon met with some
            of their worst fears as they discover the planet is inhabited by monstrous dinosaurs.
        </item>
        <item>
            Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the
            power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people
            and then the surface world. Standing in his way is Arthur Curry, Orms half human, half Atlantean brother
            and true heir to the throne.
        </item>
        <item>
            Miles Morales is juggling his life between being a high school student and being a spiderman. When Wilson
            Kingpin Fisk uses a super collider, others from across the Spider Verse are transported to this dimension.
        </item>
        <item>
            Three years after the demise of Jurassic World, a volcanic eruption threatens the remaining dinosaurs on
            the isla Nublar, so Claire Dearing, the former park manager, recruits Owen Grady to help prevent the
            extinction of the dinosaurs once again.
        </item>
        <item>
            \nKelurahan podorejo merupakan sebuah kelurahan yang terdapat di perbatasan antara Kota Semarang dan Kabupaten Kendal.
            Kondisi geografis di kelurahan ini masih terlihat seperti pedesaan yang sudah cukup maju, mengingat posisinya yang
            dekat dengan hutan dan lahan pertanian yang cukup luas.\n

            \nA. Sejarah Podorejo
            \nPada awalnya, sebelum Indonesia merdeka, menurut Bapak H. Abdul Rozaq (73) kelurahan Podorejo terbentuk dari
            bergabungnya dari 2 desa yakni desa Kaliancar dan desa Padaan. Kedua desa ini dipimpin oleh
            2 orang yakni Bapak Suto sebagai kepala desa Padaan dan Bapak Sawit Kanda sebagai kepala desa Kaliancar.
            Kedua desa ini terus hidup berdampingan sampai tergatinya kadus yang bernama Bapak Karjono memimpin desa tersebut.
            Bapak Karjono lah pencetus penggabungan wilayah Padaan dan Kaliancar menjadi satu wilayah yang pada tahun
            1940 an menggabungkan nama Padaan dan Kaliancar menjadi Kelurahan Padaan. Pada tahun 1945 an, setelah Indonesia
            merdeka, Bapak Karjono turun dari jabatannya dan digantikan oleh cariknya yang bernama Bapak Surdio. Narasumber
            menyatakan bahwa pada masa pemerintahan Bapak Surdio, nama Podorejo sudah lahir menggantikan yang semula Kelurahaan
            Padaan menjadi Kelurahan Podorejo yang secara etimologi artinya “Podo-podo rejo” atau “sama-sama makmur”,
            menjadikan kelurahan baru yang dapat hidup secara berdampingan dan makmur bersama.\n

            \nB. Pemerintahan Seteleh Merdeka
            \nSetelah pemerintahan Bapak Surdio berakhir terdapat daftar urutan lurah yang terus berusaha mengembangkan kelurahan Podorejo yakni:\n

             \n•Bapak Sugio
                \n•Bapak Sri Suharjo
                 \n•Bapak Sri Nugroho
                 \n•Bapak Aji Sukartono
                 \n•Bapak Sri Nugroho
                \n•Bapak Purwanto
                \n•Bapak Heri Susanto
                 \n•Bapak Bambang Edi Wisoko
                \n•Bapak Soekiswo
                 \n•Bapak Nahrowi
                 \n•Bapak Yusdi
               \n•Bapak Maskoni
                \n•Ibu Sri Hartini\n

            \nC. TRIVIA
            \n•Pada masa sebelum merdeka, tiap-tiap kepala kelurahan/desa membangun kantor dan aulanya sendiri, yang biasanya dibangun bersebelahan dengan rumah pribadi.
            \n•Podorejo merupakan daerah Kabupaten Kendal sebelum masa pemerintahan  Bapak Heru
            \n•Pemilihan kepala dusun di Podorejo sudah menggunakan voting namun secara terbukan dan tanpa asas rasahia, yakni dengan cara menyiapkan kursi untuk calon yang akan diikuti oleh pemilih dari belakang dengan cara jongkok satu persatu.
            \n•Tiap kepala desa/lurah dapat menjabat sebagai lurah/kades hingga beliau wafat atau dalam posisi tidak dapat bekerja lagi



        </item>
        <item>
            Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the
            World Wide Web in search of a replacement part to save Vanellopes video game, Sugar Rush. In way over
            their heads, Ralph and Vanellope rely on the citizens of the internet the netizens to help navigate
            their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of
            trend-making site BuzzzTube.
        </item>
        <item>
            King TChalla returns home from America to the reclusive, technologically advanced African nation of
            Wakanda to serve as his country new leader. However, TChalla soon finds that he is challenged for the
            throne by factions within his own country as well as without. Using powers reserved to Wakandan kings,
            TChalla assumes the Black Panther mantel to join with girlfriend Nakia, the queenmother, his princesskid
            sister, members of the Dora Milaje (the Wakandan special forces) and an American secret agent, to prevent
            Wakanda from being dragged into a world war.
        </item>
        <item>
            Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the
            music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics.
            When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest
            challenge yet – finding a way to keep the band together amid the success and excess.
        </item>
        <item>
            When an IMF mission ends badly, the world is faced with dire consequences. As Ethan Hunt takes it upon
            himself to fulfill his original briefing, the CIA begin to question his loyalty and his motives. The IMF
            team find themselves in a race against time, hunted by assassins while trying to prevent a global
            catastrophe.
        </item>
    </string-array>

    <array name="data_photo">
        <item>https://i.ibb.co/gRwSKzt/babankerep.png</item>
        <item>https://i.ibb.co/5BGrFxF/bringin.png</item>
        <item>https://i.ibb.co/2yKjcNZ/gondoriyo.png</item>
        <item>https://i.ibb.co/dsNZNM7/kalipancur.png</item>
        <item>https://i.ibb.co/vJ0wpK8/ngaliyan.png</item>
        <item>https://i.ibb.co/12PH85z/podorejo.png</item>
        <item>https://i.ibb.co/qM8Myv1/purwoyoso.png</item>
        <item>https://i.ibb.co/P1XfFBX/tambakaji.png</item>
        <item>https://i.ibb.co/RN04RPC/wates.png</item>
        <item>https://i.ibb.co/7np0sSQ/wonosari.png</item>
    </array>
</resources>
