<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_foto_detail"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/foto_kelurahan_detail"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#000" />

            <TextView
                android:id="@+id/tv_nama_makanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:text="@string/nama_kelurahan_satu"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_detail_makanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:textColor="#F44336"
                android:justificationMode="inter_word"
                android:text="@string/deskripsi_kelurahan_satu" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>